# seedling-tracker-with-IAC

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
app/: models.py
backend/: Dockerfile  Makefile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3758ba2738b7_create_seedlings_table.py  896ccb555f59_add_image_columns.py
backend/app/: DEBUG.md  database.py  main.py  schemas.py  worker.py
backend/app/core/: config.py
backend/app/models/: plant.py
backend/app/repositories/: seedling_repo.py
backend/app/services/: s3.py  seedling_service.py  sqs.py
backend/features/: seedling_management.feature
backend/features/steps/: seedling_steps.py
backend/tests/: conftest.py  test_api.py  test_aws_behavior.py  test_service.py
infra/: main.tf
infra/aws/: .terraform.lock.hcl  README.md  db.tf  provider.tf  s3.tf  sqs.tf  terraform.tfstate.1773521525.backup  terraform.tfstate.1773523522.backup  terraform.tfstate.1773523530.backup  vpc.tf
infra/docker-local/: main.tf  outputs.tf
infra/docker-local/nginx/: default.conf
infra/k8s-kind/: app.tf  db.tf  k8-debugging.md  main.tf  providers.tf
infra/k8s-kind-standalone/: app.tf  k8-debugging.md
nginx/: nginx.conf
terraform/: .gitignore  main.tf  providers.tf  variables.tf
